manifests/ntfy/base/ntfy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  labels:
    app: ntfy-deployment
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.18 # set deployed version
          args: ["serve"]
          env: #example of adjustments made in environmental variables
            - name: TZ
              value: "Europe/Vienna"
            # - name: NTFY_DEBUG
            #   value: "true"
            - name: NTFY_LOG_LEVEL
              value: INFO
            - name: NTFY_BASE_URL
              value: "https://ntfy.tyrongabriel.com"
            # - name: NTFY_AUTH_FILE
            #   value: "/var/cache/ntfy/user.db"
            # # - name: NTFY_AUTH_DEFAULT_ACCESS
            # #   value: "deny-all"
            # - name: NTFY_CACHE_FILE
            #   value: "/var/cache/ntfy/cache.db"
          ports:
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu: 200m
            requests:
              cpu: 150m
              memory: 150Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume # generated via configMapGenerator from kustomization file
            - mountPath: /var/cache/ntfy
              name: cache-volume # cache volume mounted to persistent volume
      volumes:
        - name: config-volume
          configMap: # uses configmap generator to parse server.yml to configmap
            name: server-config
        - name: cache-volume
          persistentVolumeClaim: # stores /cache/ntfy in defined pv
            claimName: ntfy-pvc
