manifests/ntfy/base/ntfy-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-ingress
  labels:
    app.kubernetes.io/name: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.tyrongabriel.com`)
      kind: Rule
      services:
        - name: ntfy-svc
          port: 80
          namespace: ntfy
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
      middlewares:
        - name: k3s-kubernetes-outpost
          namespace: authentik # Replace with the actual namespace of your Authentik middleware
  tls:
    #certResolver: cloudflare-issuer # Use the cert resolver from your annotations
    domains:
      - main: ntfy.tyrongabriel.com
        sans:
          - ntfy.tyrongabriel.com
